--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
     <h1>Lauren Hossack</h1>
     <ul>
       <li><a href="http://twitter.com/LtweetH">Tweet Me</a></li>
-      <li><a href="#">About Me</a></li>
+      <li><a href="#">Send me an email</a></li>
     </ul>
   </header>
   <article>
-    <h2>Just something I'm working on...</h2>
+    <h2>Just a little project I'm working on...</h2>
     <p>Learning to code with the help of Code First: Girls at my university, building up this site from...well, code. It will get better, promise!</p>
     <button>Like</button>
   </article>
