--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     <button>Like</button>
   </article>
   <script>
-    $("button").on("click", function() {
-      alert("Clicked!");
+   $("button").on("click", function() {
+      alert("Thanks!");
     });
   </script>
 </body>
