--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
 </head>
 <body>
   <header>
-    <img src=<a href="http://imgur.com/rGCmGwN"><img src="http://i.imgur.com/rGCmGwN.jpg"></a>>
+    <div>
+      <div style='position:absolute;z-index:0;left:0;top:0;width:100%;height:100%'>
+  <img src='http://i.imgur.com/ydsjUns.jpg' style='width:100%;height:100%' alt='[]' /> 
     <h1>Lauren Hossack</h1>
     <ul>
       <li><a href="http://twitter.com/LtweetH">Tweet Me</a></li>
@@ -66,5 +68,13 @@
    $("button").on("click", function() {
       alert("Thanks!");
     });
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-48683671-1', 'laurenhossack.co.uk');
+  ga('send', 'pageview');
   </script>
 </body>
+
